# palai

./: .dockerignore  .gitignore  .tool-versions  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MASTER-SPEC.md  Makefile  README.md  SECURITY.md  engine  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
adapters/repositories/: authoring.go  broker.go  broker_github.go  broker_github_test.go  broker_test.go  gitargs.go  policy.go  prepare.go  publish.go  publish_github_test.go  publish_test.go  secretscan.go  worktree.go
cmd/cli/: main.go
engines/reference/: .dockerignore  Dockerfile  pyproject.toml
engines/reference/src/: palai_tool_sdk.py
engines/reference/src/palai_engine/: __init__.py  __main__.py  checkpoint.py  commands.py  context.py  loop.py  output.py  protocol.py
engines/reference/tests/: test_checkpoint.py  test_loop.py  test_protocol.py  test_restore.py  test_schema_pin.py  test_tool_sdk_conformance.py
engines/reference/tests/fixtures/: supervisor-hello.jsonl
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/conformance/: live_retrieve.py  runner.py
sdks/python/src/palai/: __init__.py  _client.py  _sse.py  _stream.py  errors.py  webhook.py
sdks/python/src/palai/resources/: __init__.py  _common.py  _resources.py
sdks/python/tests/: test_async.py  test_errors.py  test_requests.py  test_retry.py  test_sse.py  test_stream.py  test_webhook.py
spikes/: manifest.json
storage/: embed.go  migrations.go  migrations_test.go  tenant.go
(+1252 files in other folders)
