[project]
name = "palai-engine"
version = "0.1.0"
description = "Palai provider-neutral reference engine: engine.v1 JSONL over stdio."
requires-python = ">=3.14,<3.15"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
